# lau-computer-graphics

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: agent_viz.rs  bezier.rs  color.rs  lib.rs  projection.rs  rasterize.rs  ray.rs  shading.rs  transform.rs
