[package]
name = "lau-computer-graphics"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-computer-graphics"
description = "Computer graphics fundamentals — rendering, transforms, rasterization, ray tracing, and shading"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
